# vacuum

./: .gitignore  CMakeLists.txt  README.md  TODO.md  vacuum.c
.github/workflows/: ci.yml
tests/: run.sh
